Fix issue of page-nav buttons displaying under the content on smaller resolutions.

--- a/main.css
+++ b/main.css
@@ -390,6 +390,7 @@ form {
 }
 
 .page-nav ul {
+	display: inline-block;
 	padding: 0;
 }
 
